--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,8 @@
     <packaging>pom</packaging>
     <modules>
         <module>backend</module>
+        <module>frontend</module>
+        <module>war</module>
     </modules>
 
     <groupId>sudoku</groupId>
