--- a/war/pom.xml
+++ b/war/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>automaticsudoku</artifactId>
         <groupId>sudoku</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <packaging>war</packaging>
@@ -16,8 +16,8 @@
         <dependency>
             <groupId>sudoku</groupId>
             <artifactId>backend</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <type>war</type>
+            <version>1.0.0-SNAPSHOT</version>
+            <type>jar</type>
         </dependency>
         <dependency>
             <groupId>sudoku</groupId>
