--- a/frontend/pom.xml
+++ b/frontend/pom.xml
@@ -6,7 +6,7 @@
 
   <parent>
     <artifactId>automaticsudoku</artifactId>
-    <groupId>sudoku</groupId>
+    <groupId>at.homeproductions.sudoku</groupId>
     <version>1.0.0-SNAPSHOT</version>
   </parent>
 
