add quarksu dependency

--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
         <module>backend</module>
         <module>frontend</module>
         <module>war</module>
+        <module>quarkus</module>
     </modules>
 
     <groupId>at.homeproductions.sudoku</groupId>
