--- a/quarkus/pom.xml
+++ b/quarkus/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <artifactId>automaticsudoku</artifactId>
+    <artifactId>automaticsudoku-dml</artifactId>
     <groupId>at.homeproductions.sudoku</groupId>
     <version>1.0.0-SNAPSHOT</version>
   </parent>
@@ -39,16 +39,13 @@
     <dependency>
       <groupId>at.homeproductions.sudoku</groupId>
       <artifactId>backend</artifactId>
-      <version>1.0.0-SNAPSHOT</version>
-      <type>jar</type>
+<!--      <type>jar</type>-->
     </dependency>
     <dependency>
       <groupId>at.homeproductions.sudoku</groupId>
       <artifactId>frontend</artifactId>
-      <version>1.0.0-SNAPSHOT</version>
-      <type>war</type>
+<!--      <type>war</type>-->
     </dependency>
-
 
     <dependency>
       <groupId>io.quarkus</groupId>
