--- a/war/pom.xml
+++ b/war/pom.xml
@@ -3,7 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>automaticsudoku</artifactId>
+        <artifactId>automaticsudoku-dml</artifactId>
         <groupId>at.homeproductions.sudoku</groupId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
@@ -16,14 +16,10 @@
         <dependency>
             <groupId>at.homeproductions.sudoku</groupId>
             <artifactId>backend</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
-            <type>jar</type>
         </dependency>
         <dependency>
             <groupId>at.homeproductions.sudoku</groupId>
             <artifactId>frontend</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
-            <type>war</type>
         </dependency>
     </dependencies>
     <properties>
