--- a/quarkus/pom.xml
+++ b/quarkus/pom.xml
@@ -22,6 +22,7 @@
     <quarkus.platform.group-id>io.quarkus</quarkus.platform.group-id>
     <quarkus.platform.version>1.1.1.Final</quarkus.platform.version>
     <surefire-plugin.version>2.22.1</surefire-plugin.version>
+    <version.exec-maven-plugin>1.6.0</version.exec-maven-plugin>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -119,8 +120,83 @@
         </executions>
       </plugin>
     </plugins>
+
+
   </build>
   <profiles>
+
+<!--    QUARKUS DEV MODE-->
+    <profile>
+      <id>quarkus_compile_dev</id>
+      <activation>
+        <property>
+          <name>quarkus_compile_dev</name>
+        </property>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>exec-maven-plugin</artifactId>
+            <version>${version.exec-maven-plugin}</version>
+            <executions>
+              <execution>
+                <id>compile quarkus in dev mode</id>
+                <phase>install</phase>
+                <configuration>
+                  <executable>mvnw.cmd</executable>
+                  <workingDirectory>${basedir}</workingDirectory>
+                  <arguments>
+                    <argument>compile</argument>
+                    <argument>quarkus:dev:</argument>
+                  </arguments>
+                </configuration>
+                <goals>
+                  <goal>exec</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+
+    <!--    QUARKUS PACKAEE-->
+    <profile>
+      <id>quarkus_package</id>
+      <activation>
+        <property>
+          <name>quarkus_package</name>
+        </property>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>exec-maven-plugin</artifactId>
+            <version>${version.exec-maven-plugin}</version>
+            <executions>
+              <execution>
+                <id>package quarkus</id>
+                <phase>package</phase>
+                <configuration>
+                  <executable>mvnw.cmd</executable>
+                  <workingDirectory>${basedir}</workingDirectory>
+                  <arguments>
+                    <argument>package</argument>
+                  </arguments>
+                </configuration>
+                <goals>
+                  <goal>exec</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+
+
     <profile>
       <id>native</id>
       <activation>
