--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -31,6 +31,12 @@
             <version>8.0</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13</version>
+        </dependency>
+
     </dependencies>
 
 
